<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_company">东太科技有限公司  版本权所有(C) 2014</string>
    <string name="s_com_email">tech@eastsun.net</string>
    <string name="s_com_web">http://www.eastsun.net</string>
    <string name="s_com_fax">0571-88368008</string>
    <string name="s_com_phone">0571-88388111</string>
    <string name="app_name">东太违规行为管理系统</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">MainActivity</string>
    <string name="login_dialog_logo">开源中国</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入账号</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_rememberPW">记住密码</string>
    <string name="login_dialog_autoLogin">自动登录</string>
    <string name="login_dialog_setting">设置</string>
    <string name="title_activity_setting">系统设置</string>
    <string name="s_about">关于</string>
    <string name="s_save">保存</string>
    <string name="cent_ip">服务器地址:</string>
    <string name="s_enable_2g_3g">2G/3G模式上传下载</string>
    <string name="s_enable_message">消息提示</string>
    <string name="s_enable_message_v">消息振动提示</string>
    <string name="s_enable_message_night">夜间防骚乱模式</string>
    <string name="title_activity_select_project">选择项目</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_comm_header">通用返回</string>
    <string name="btn_query">查询</string>
    <string name="btn_ok">确定</string>
    <string name="btn_save">保存</string>
    <string name="btn_reset">重置</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_back">返回 </string>
    <string name="btn_exit">退出</string>
    <string name="s_header_title">标题</string>
    <string name="s_project_name">项目:</string>
    <string name="s_click_select_project">点击选择项目</string>
    <string name="func_catch_photo">违拍</string>
    <string name="func_read">批阅</string>
    <string name="func_reform">整拍</string>
    <string name="func_query">查询</string>
    <string name="func_setting">设置</string>
    <string name="func_read_breaklaw">批违</string>
    <string name="func_read_reform">批整</string>
    <string name="s_project">项目</string>
    <string name="title_activity_cathe_photo">CathePhotoActivity</string>
    <string name="photo_project">选择项目</string>
    <string name="photo_prop">判定性质</string>
    <string name="photo_break_law_opt">判定性质:</string>
    <string name="s_photo_break">违规抓拍</string>
    <string name="photo_picture">拍照</string>
    <string name="photo_video">视频</string>
    <string name="photo_import">照片</string>
    <string name="photo_save_draft">草稿</string>
    <string name="photo_save">保存</string>
    <string name="s_call_history">草稿</string>
    <string name="title_activity_actionlibrary">违规行为库</string>
    <string name="title_activity_danger_library">危险源辨识库</string>
    <string name="s_safe_sub_item">安全分项:</string>
    <string name="s_item_type">项目类型:</string>
    <string name="s_check_item">检查类型:</string>
    <string name="s_break_option">违规</string>
    <string name="s_action_option">行为库</string>
    <string name="s_danger_option">危险库</string>
    <string name="s_user_define_option">自定义</string>
    <string name="s_danger_class">类别:</string>
    <string name="s_gen_date_range">时间范围:</string>
    <string name="network_not_connected">网络未连接</string>
    <string name="s_sync">同步</string>
    <string name="title_activity_sync">同步</string>
    <string name="title_activity_reform">整改</string>
    <string name="title_activity_view_pic">查看图片</string>
    <string name="title_activity_break_view">MainActivity</string>
    <string name="title_activity_reform_view">MainActivity</string>
    <string name="s_project_dept">项目部门:</string>
    <string name="s_view_level_1">初级评阅:</string>
    <string name="s_view_level_2">中级评阅:</string>
    <string name="s_view_level_3">高级评阅:</string>
    <string name="s_view_level_4">最高评阅:</string>
    <string name="s_break_type">违规性质:</string>
    <string name="s_break_date">违规时间:</string>
    <string name="s_break_content">违规内容:</string>
     <string name="s_reform_content">整改内容:</string>
    <string name="s_check_status">审核状态:</string>
    <string name="s_break_pic">违规图片:</string>
	
	<string name="cent_ip_hint">输入IP或者域名</string>
   	<string name="about">关于</string>
    <string name="loginOut">退出</string>
</resources>