<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.winso.break_law.activity.MainBreakViewActivity" >

    <include
        android:id="@+id/include1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        layout="@layout/activity_main_header" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/include1"
        android:background="@color/line_color" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view1"
        android:background="@color/gray" >

        <TableLayout
            android:id="@+id/tb_view_modify"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tb_project_dept"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/aliceblue" >

                <TextView
                    android:id="@+id/tx_check_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_project_dept" />

                <TextView
                    android:id="@+id/tx_project_dept"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:id="@+id/tb_break_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/aliceblue" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_break_type" />

                <TextView
                    android:id="@+id/tx_break_option"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:id="@+id/tb_break_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/aliceblue" >

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_break_date" />

                <TextView
                    android:id="@+id/tx_break_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:id="@+id/tb_break_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/aliceblue" >

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_break_content" />

                <TextView
                    android:id="@+id/tx_break_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:id="@+id/TableRow05"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dip"
                android:background="@color/aliceblue" >

                <ImageView
                    android:id="@+id/img_break"
                    android:layout_width="fill_parent"
                    android:layout_height="170dp"
                    android:layout_weight="1"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:scaleType="fitXY"
                    android:layout_span="2"
                    android:src="@drawable/btn_sync_pic_sel" />

            </TableRow>

            <TableRow
                android:id="@+id/tb_check_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/aliceblue" >

                <TextView
                    android:id="@+id/TextView07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_check_status" />

                <Spinner
                    android:id="@+id/sp_check_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:id="@+id/tb_view_level_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dip"
                android:background="@color/aliceblue" >

                <TextView
                    android:id="@+id/q_rect_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_view_level_1" />

                <EditText
                    android:id="@+id/ed_view_level_1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tb_view_level_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/aliceblue" >

                <TextView
                    android:id="@+id/TextView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_view_level_2" />

                <EditText
                    android:id="@+id/ed_view_level_2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:id="@+id/tb_view_level_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dip"
                android:background="@color/aliceblue" >

                <TextView
                    android:id="@+id/TextView09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_view_level_3" />

                <EditText
                    android:id="@+id/ed_view_level_3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:id="@+id/tb_view_level_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/aliceblue" >

                <TextView
                    android:id="@+id/TextView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_view_level_4" />

                <EditText
                    android:id="@+id/ed_view_level_4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </TableRow>

        </TableLayout>

    </ScrollView>

</RelativeLayout>